# land-app

./: .env.example  .env.production.example  .gitignore  ADVANCED_ANALYTICS_DASHBOARD_HANDOFF.md  AI_DEVELOPMENT_HANDOFF.md  AI_DEVELOPMENT_HANDOFF_PHASE_2A.md  AI_QUICK_REFERENCE.md  AI_TESTING_DEBUGGING_REPORT.md  ALGORITHM_VALIDATION_REPORT.md  API_REFERENCE.md  Alabama Auction Watcher.bat  Alabama Auction Watcher.command  Alabama Auction Watcher.desktop  CLAUDE.md  CLAUDE_CODE_QUICK_START.md  COMPREHENSIVE_DATA_LOADING_PLAN.md  COMPREHENSIVE_TEST_VALIDATION_REPORT.md  CONTRIBUTING.md  CONVERSATION_SUMMARY.md  DEPLOYMENT.md  DESKTOP_LAUNCHER_README.md  Dockerfile  FRONTEND_UI_HANDOFF_REPORT.md  FUTURE_ENHANCEMENT_ROADMAP.md  HANDOFF_2025_12_26.md  HANDOFF_PROMPT_FOR_NEXT_AI.md  HANDOFF_REPORT.md  HANDOFF_REPORT_CLINE.md  HANDOFF_REPORT_FROM_CLINE.md  HANDOFF_REPORT_TO_AI.md  HANDOFF_REPORT_TO_CLAUDE.md  HANDOFF_TO_NEXT_INSTANCE.md  NEW_INSTANCE_PROMPT.md  NEXT_AI_DESKTOP_PROMPT.md  NEXT_AI_ERROR_RESOLUTION_PROMPT.md  NEXT_AI_PRODUCTION_DEPLOYMENT_PROMPT.md  NEXT_AI_PROMPT.md  NEXT_INSTANCE_NOTES.md  NEXT_INSTANCE_PROMPT.md  PHASE_2A_WEEK_3-4_ROADMAP.md  (+67 more)
.claude/: settings.local.json
backend_api/: auth.py  config.py  main.py
branding/: BRAND_IDENTITY_GUIDE.md  generate_icons.py  simple_icon_generator.py
config/: ai_diagnostics.py  ai_logging.py  caching.py  database_optimization.py  enhanced_error_handling.py  error_correlation_engine.py  logging_config.py  rate_limiting.py  (+5 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs
(+433 files in other folders)
